# ChessEngine

./: CMakeLists.txt  README.md  TODO.txt
include/: board.hpp  eval.hpp  interface.hpp  move.hpp  movegen.hpp  movetables.hpp  perft.hpp  search.hpp
src/: board.cpp  eval.cpp  interface.cpp  main.cpp  movegen.cpp  movetables.cpp  perft.cpp  search.cpp
tests/: main.cpp  perft_tests.cpp
